--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -154,7 +154,7 @@
     "banking-movements": "Banking movements",
     "barcode": "Barcode",
     "bcc": "BCC",
-    "become-sponsor": "Become a Sponsor",
+    "become-sponsor": "Hazte patrocinador",
     "big": "Big",
     "billing": "Billing",
     "billing-address": "Billing address",
