--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -713,7 +713,7 @@
     "grouping-type": "Tipo di raggruppamento",
     "groups": "gruppi",
     "has-attachments": "ha allegati",
-    "has-parent": "Ha genitore",
+    "has-parent": "Ha un genitore",
     "hash": "Hash",
     "header": "Intestazione",
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
