--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -43,7 +43,7 @@
     "accounting-possible-duplicated": "Możliwe, że to zapis księgowy jest zduplikowany z innym. Jeśli nie, aby uniknąć tego komunikatu, po prostu zmień koncepcję.",
     "accounting-reports": "Raporty księgowe",
     "accounting-within-regularization": "W tym okresie już istnieje regulacja podatkowa. Nie można wprowadzać zmian.",
-    "accounts": "Cuentas",
+    "accounts": "Konta",
     "accrual-date": "Fecha devengo",
     "action": "Działanie",
     "actions": "Acciones",
@@ -52,7 +52,7 @@
     "add": "Dodaj",
     "add-all-disabled": "Dodaj wszystko wyłączone",
     "add-all-enabled": "Dodaj wszystko włączone",
-    "add-extra-lines": "Añadir líneas extra",
+    "add-extra-lines": "Dodaj dodatkowe linie",
     "add-file": "Dodaj plik",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Dodaj nową wtyczkę",
@@ -89,7 +89,7 @@
     "allow-sale-without-stock-n": "Zezwól na sprzedaż bez zapasów w nowych produktach",
     "allow-update": "Permitir modificar",
     "always-to-company-email": "Zawsze na email firmy",
-    "amount": "Importe",
+    "amount": "Kwota",
     "amount-without-discount": "Cena bez zniżki",
     "and": "y",
     "any": "Dowolny",
@@ -109,7 +109,7 @@
     "apply": "Aplicar",
     "approve": "Zatwierdź",
     "approve-document": "Aprobar documento",
-    "approve-document-same-date": "Aprobar documento en la misma fecha",
+    "approve-document-same-date": "Zatwierdź dokument w tym samym dniu",
     "approved": "Aprobado",
     "april": "Abril",
     "are-you-sure": "Tego nie można cofnąć. Czy na pewno chcesz kontynuować?",
@@ -181,7 +181,7 @@
     "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
     "cancel": "Anuluj",
     "cancel-data": "Anuluj zmiany lub operację",
-    "cancelled": "Cancelado",
+    "cancelled": "Anulowane",
     "cannot-generate-accounting-entry": "Błąd podczas generowania księgowania faktury %invoice%",
     "cant-assign-date-already-regularized": "Nie można przypisać daty %date%, ponieważ dla tego okresu już wprowadzono regulację %tax%.",
     "cant-assing-subaccount-supplier": "Imposible asociar la subcuenta para el proveedor %supplierCode%",
@@ -310,7 +310,7 @@
     "controller-not-found": "Kontroler nie znaleziony",
     "conversion-rate": "Tasa de conversión a €",
     "conversion-rate-not-0": "Stawka konwersji nie może być 0.",
-    "convert-into-customer": "Convertir en cliente",
+    "convert-into-customer": "Zamień na klienta",
     "convert-into-supplier": "Konwertuj do dostawcy",
     "cookies": "Cookies",
     "copy": "Copiar",
@@ -334,10 +334,10 @@
     "create-new-record": "Utwórz nowy wpis",
     "created": "Creado",
     "created-default-admin-account": "Se ha creado el usuario %nick% con la contraseña %pass%",
-    "creation-date": "Fecha de creación",
+    "creation-date": "Data utworzenia",
     "credit": "Haber",
     "crm": "CRM",
-    "cron-job": "Tarea programada",
+    "cron-job": "Zadanie cykliczne",
     "cron-timeout": "Cron został zatrzymany, aby nie przekroczyć maksymalnego czasu wykonania PHP. Proszę, uruchom cron z terminala, aby uniknąć tego ograniczenia.",
     "crons": "Crony",
     "currency": "Waluta",
@@ -382,7 +382,7 @@
     "date-in": "Data wejścia",
     "date-of-suspension": "Data zawieszenia",
     "date-of-the-document": "Data dokumentu do wygenerowania",
-    "date-out": "Fecha salida",
+    "date-out": "Data wyjścia",
     "date-out-of-exercise-range": "La fecha está fuera del rango del ejercicio %exerciseName%",
     "date-wildcard-info": "Bieżąca data (data z komputera)",
     "dateentry-wildcard-info": "Data wskazana w nagłówku wpisu księgowego",
@@ -603,7 +603,7 @@
     "february": "Febrero",
     "field-can-not-be-null": "Pole %fieldName% w tabeli %tableName% nie może być puste",
     "field-required": "Pole wymagane: %field%",
-    "fields": "Campos",
+    "fields": "Pola",
     "file": "Plik",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nombre de archivo",
@@ -630,7 +630,7 @@
     "first-trimester": "Primer trimestre",
     "fiscal-data": "Dane fiskalne",
     "fiscal-exercise": "Ejercicio fiscal",
-    "fiscal-id": "Id. Fiscal",
+    "fiscal-id": "Id. Fiskalny",
     "fiscal-number": "Numer fiskalny",
     "fixed-value": "Valor fijo",
     "flag": "Flaga",
@@ -659,7 +659,7 @@
     "from-subaccount": "Z subkonta",
     "full-access": "Pełny dostęp",
     "full-path": "Pełna ścieżka",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Znaleziono lukę dla numeru %numero%, dnia %fecha%, %codserie% i firmy %idempresa%",
     "general": "Ogólny",
     "general-concepts": "Conceptos generales",
     "general-data": "Dane ogólne",
@@ -687,7 +687,7 @@
     "generated-manufacturers": "Wygenerowano %quantity% producentów.",
     "generated-products": "%quantity% wygenerowanych produktów.",
     "generated-subaccounts": "Wygenerowano %quantity% subkont księgowych.",
-    "generated-supplier": "%quantity% proveedores generados.",
+    "generated-supplier": "%quantity% dostawców wygenerowanych.",
     "generated-supplier-delivery-notes": "%quantity% albaranes de compra generados.",
     "generated-supplier-estimations": "%quantity% presupuestos de proveedor generados.",
     "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
@@ -705,7 +705,7 @@
     "group-by-week": "Grupuj wg tygodnia",
     "group-by-week-unixtime": "Grupuj według tygodnia (unixtime)",
     "group-by-year": "Agrupar por año",
-    "group-by-year-unixtime": "Agrupar por año (unixtime)",
+    "group-by-year-unixtime": "Grupuj według roku (unix time)",
     "group-more-docs-p": "Jeśli chcesz, możesz grupować razem z innymi dokumentami tego klienta\/dostawcy",
     "group-name": "Nombre del Grupo",
     "group-or-split": "Agrupar o partir",
@@ -752,7 +752,7 @@
     "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
     "import-file": "Plik importu",
     "in-progress": "W trakcie",
-    "in-stock": "En stock",
+    "in-stock": "Na magazynie",
     "inactive": "Nieaktywny",
     "income-and-expenses": "Ingresos y Gastos",
     "incompatible-document": "Documento incompatible: %code%. Para poder agrupar documentos deben tener el mismo cliente o proveedor, serie, almacén, divisa y descuento global.",
@@ -829,7 +829,7 @@
     "languages-cs_CZ": "Checo",
     "languages-de_DE": "Niemiecki",
     "languages-en_EN": "Inglés",
-    "languages-es_AR": "Español (Argentina)",
+    "languages-es_AR": "Hiszpański (Argentyna)",
     "languages-es_CL": "Espanol (Chile)",
     "languages-es_CO": "Español (Colombia)",
     "languages-es_CR": "Español (Costa Rica)",
@@ -945,8 +945,8 @@
     "memcache-host": "Servidor Memcache",
     "memcache-port": "Puerto Memcache",
     "memcache-prefix": "Prefijo Memcache",
-    "memcache-set-key-item": "Asignado elemento '%item%' a Memcache.",
-    "menu": "Menú",
+    "memcache-set-key-item": "Przypisano element '%item%' do Memcache.",
+    "menu": "Menu",
     "message": "Mensaje",
     "messages-component-title": "Komunikaty i wiadomości",
     "meta-description": "FacturaScripts es un software de facturación y contabilidad para pymes. Es software libre bajo licencia GNU\/LGPL.",
@@ -1015,7 +1015,7 @@
     "no": "Nie",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
-    "no-extra-lines": "No añadir líneas extra",
+    "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
     "no-outstanding-amount": "No hay importe pendiente",
@@ -1034,7 +1034,7 @@
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
     "not-stored-content": "Zawartość nieprzechowana",
-    "not-valid-email": "Email %email% no válido",
+    "not-valid-email": "Email %email% jest nieprawidłowy",
     "not-valid-fiscal-number": "El %type% %number% no es válido",
     "not-valid-image": "To nie jest prawidłowy obraz",
     "not-valid-percentage-retention": "Nieprawidłowy procent. Musi być większy niż 0.00",
@@ -1042,7 +1042,7 @@
     "notes": "Notatki",
     "notice": "Powiadomienie",
     "notices": "Powiadomienia",
-    "notification": "Notificación",
+    "notification": "Powiadomienie",
     "notifications": "Powiadomienia",
     "november": "Noviembre",
     "number": "Numer",
@@ -1137,7 +1137,7 @@
     "phase": "Faza",
     "phone": "Telefon",
     "phone2": "Teléfono 2",
-    "phones": "Teléfonos",
+    "phones": "Telefony",
     "php-extension-needed": "Se requiere la extensión %extension% en la configuración de PHP",
     "php-extension-not-found": "Nie masz zainstalowanego rozszerzenia %extension% PHP.",
     "php-support-end": "Wsparcie dla PHP %current% wkrótce się kończy. Proszę zaktualizować PHP do wersji %min% lub wyższej.",
@@ -1194,7 +1194,7 @@
     "printed": "Wydrukowane",
     "printing-format": "Format druku",
     "printing-formats": "Formaty druku",
-    "priority": "Prioridad",
+    "priority": "Priorytet",
     "private": "Prywatny",
     "private-key": "Klucz prywatny",
     "process": "Proces",
@@ -1253,7 +1253,7 @@
     "rectified-invoices": "Faktury korygujące",
     "rectifying": "Korekta",
     "rectifying-serie": "Serie rectificativa",
-    "redirect": "Redirección",
+    "redirect": "Przekierowanie",
     "reference": "Referencja",
     "reference+description": "Referencja + Opis",
     "refresh": "Odśwież",
@@ -1274,7 +1274,7 @@
     "rejected": "Odrzucono",
     "related": "Powiązane",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
-    "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
+    "related-subaccount-purchases-sales": "Powiązana subkonta do zakupów i sprzedaży",
     "reloading": "Recargando...",
     "remove-filter": "Usuń filtr",
     "remove-from-list": "Quitar",
@@ -1393,7 +1393,7 @@
     "simplified": "Uproszczona",
     "size": "Tamaño",
     "sketch": "Boceto",
-    "sketch-invoice-warning": "Esta factura todavía es un boceto. Hágala oficial cambiado su estado a emitida.",
+    "sketch-invoice-warning": "Ta faktura jest nadal szkicem. Uczyń ją oficjalną, zmieniając jej status na wydany.",
     "small": "Mały",
     "smaller-than": "Mniejsze niż",
     "soap-extension-not-installed": "Rozszerzenie SOAP nie jest zainstalowane w PHP. Skontaktuj się z dostawcą hostingu, aby je aktywować.",
@@ -1443,7 +1443,7 @@
     "subaccount-irpf-creditor": "Rachunek IRPF dla zakupów",
     "subaccount-not-found": "Subcuenta %subAccountCode% no encontrada.",
     "subaccount-purchases": "Cuenta para compras",
-    "subaccount-pyg-not-found": "Subcuenta de pérdidas y ganancias no encontrada",
+    "subaccount-pyg-not-found": "Subkonto zysków i strat nie znalezione",
     "subaccount-sales": "Cuenta de ventas",
     "subaccounts": "Subkonta",
     "subfamilies": "Podrodziny",
@@ -1460,7 +1460,7 @@
     "supplied": "Suplido",
     "supplied-amount": "Dostawy",
     "supplied-subaccount-not-found": "Podrachunek zaopatrzony nie znaleziony",
-    "supplier": "Proveedor",
+    "supplier": "Dostawca",
     "supplier-account-not-found": "Nie znaleziono subkonta dostawcy",
     "supplier-code": "Cód. Proveedor",
     "supplier-delivery-note": "Wysłano dostawę od dostawcy",
@@ -1475,7 +1475,7 @@
     "supplier-order": "Zamówienie od dostawcy",
     "supplier-orders": "Zamówienia od dostawców",
     "supplier-payment-concept": "Płatność dokumentu %document%",
-    "supplier-products": "Productos del proveedor",
+    "supplier-products": "Produkty dostawcy",
     "supplier-reference": "Referencia de proveedor",
     "suppliers": "Dostawcy",
     "support": "Wsparcie",
@@ -1528,7 +1528,7 @@
     "thursday": "Czwartek",
     "ticket": "Bilet",
     "tickets": "Bilety",
-    "time": "Hora",
+    "time": "Godzina",
     "timezone": "Strefa czasowa",
     "title": "Tytuł",
     "title-font-size": "Rozmiar czcionki tytułu",
@@ -1563,7 +1563,7 @@
     "type-critical": "Typ krytyczny",
     "type-debug": "Tipo depurar",
     "type-emergency": "Typ awaryjny",
-    "type-error": "Tipo error",
+    "type-error": "Typ błędu",
     "type-info": "Tipo info",
     "type-notice": "Typ powiadomienia",
     "type-success": "Typ poprawny",
