--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -220,7 +220,7 @@
     "change": "mudar",
     "channel": "Canal",
     "charge-date": "Data de cobrança",
-    "chart": "Chart",
+    "chart": "Gráfico",
     "charts": "gráficos",
     "chat": "Chat",
     "check-table": "Erro ao verificar a tabela '%tableName%'",
@@ -598,7 +598,7 @@
     "failed": "Falha",
     "families": "Famílias",
     "family": "Família",
-    "family-code": "Código familiar",
+    "family-code": "Código de família",
     "fax": "Fax",
     "february": "Fevereiro",
     "field-can-not-be-null": "Field %fieldName% on table %tableName% can't be null",
@@ -687,7 +687,7 @@
     "generated-manufacturers": "%quantity% fabricantes gerados.",
     "generated-products": "%quantity% produtos gerados",
     "generated-subaccounts": "%quantity% subcontas geradas.",
-    "generated-supplier": "0 fornecedor gerado.",
+    "generated-supplier": "%quantity% fornecedores gerados.",
     "generated-supplier-delivery-notes": "%quantity% notas de entrega do fornecedor geradas.",
     "generated-supplier-estimations": "%quantity% estimativas de fornecedor geradas.",
     "generated-supplier-orders": "%quantity% pedidos de fornecedores gerados.",
@@ -801,7 +801,7 @@
     "ip-banned": "Acesso bloqueado temporariamente a partir do seu IP por motivos de segurança.",
     "irpf": "IRPF",
     "irpf-record-not-found": "Registro de IRPF %value%% não encontrado.",
-    "irpf-subaccount-not-found": "irpf-subaccount-not-found",
+    "irpf-subaccount-not-found": "Subconta de IRPF não encontrada",
     "is-admin": "É administrador",
     "is-creditor": "É credor",
     "is-person": "É uma pessoa física",
@@ -941,7 +941,7 @@
     "memcache": "Memcache",
     "memcache-clear": "Memcache foi limpo.",
     "memcache-delete-key-item": "Elemento excluído '0' do Memcache.",
-    "memcache-get-key-item": "Obtém o elemento '0' do Memcache.",
+    "memcache-get-key-item": "Obtido elemento '%item%' do Memcache.",
     "memcache-host": "Servidor Memcache",
     "memcache-port": "Porta do Memcache",
     "memcache-prefix": "Prefixo Memcache",
@@ -1037,7 +1037,7 @@
     "not-valid-email": "%email% não é um email válido",
     "not-valid-fiscal-number": "Número fiscal inválido",
     "not-valid-image": "Não é uma imagem válida",
-    "not-valid-percentage-retention": "Not valid percentage retention",
+    "not-valid-percentage-retention": "Porcentagem inválida. Deve ser maior que 0,00",
     "note": "Nota",
     "notes": "Notas",
     "notice": "Aviso",
@@ -1193,7 +1193,7 @@
     "print-quantity": "Imprimir quantidade",
     "printed": "Impresso",
     "printing-format": "Formato de impressão",
-    "printing-formats": "printing-formats",
+    "printing-formats": "Formatos de impressão",
     "priority": "Prioridade",
     "private": "Privado",
     "private-key": "Chave privada",
@@ -1599,7 +1599,7 @@
     "url": "Endereço na rede Internet",
     "use-gaps": "Usar lacunas",
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
-    "user": "Do utilizador",
+    "user": "Usuário",
     "user-and-config": "Usuário e configuração",
     "users": "Usuários",
     "using-apc": "Usando cache APC",
@@ -1611,7 +1611,7 @@
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
-    "value-y": "value-y",
+    "value-y": "Valor Y",
     "values": "Valores",
     "variables": "Variáveis",
     "variant": "Variante",
