--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -271,7 +271,7 @@
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
     "commission": "Comissão",
-    "commission-general-info": "commission-general-info",
+    "commission-general-info": "Relação de percentagens de comissão que se aplicam na venda de produtos. Aplicar-se-á a percentagem com as condições mais restritivas ou concretas informadas.",
     "commission-settlement": "Liquidação de comissões %code%",
     "commissions": "Comissões",
     "common-data": "Dados comuns",
@@ -301,7 +301,7 @@
     "contacts": "Contatos",
     "context": "Contexto",
     "continue": "Continuar",
-    "contract": "contract",
+    "contract": "Contrato",
     "contracts": "contratos",
     "control-panel": "Painel de controle",
     "control-panel-decimal-warning": "Aviso: esta alteração será aplicada aos preços dos produtos, mas também aos totais das faturas, lançamentos, etc.",
@@ -602,7 +602,7 @@
     "fax": "Fax",
     "february": "Fevereiro",
     "field-can-not-be-null": "Campo %fieldName% na tabela %tableName% não pode ser nulo",
-    "field-required": "Campo requerido: %field%",
+    "field-required": "Campo obrigatório: %field%",
     "fields": "Campos",
     "file": "Arquivo",
     "file-extension-not-accepted": "Erro ao enviar o arquivo %fileName% porque a sua extensão não é permitida. As extensões permitidas são: %accepted%",
@@ -750,7 +750,7 @@
     "import": "Importar",
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contabilístico padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
-    "import-file": "Fichero de importación",
+    "import-file": "Arquivo de importação",
     "in-progress": "Em andamento",
     "in-stock": "in-stock",
     "inactive": "Inativo",
@@ -812,7 +812,7 @@
     "items-removed-correctly": "%num% elementos removidos corretamente",
     "ivarep-subaccount-not-found": "Subconta de IVA repercutido não encontrada",
     "ivasop-account-not-found": "Conta de IVA suportado não encontrada",
-    "january": "Enero",
+    "january": "Janeiro",
     "job-name": "Nome do Trabalho",
     "journal": "Diário",
     "journal-closing": "Fecho de jornal",
@@ -989,7 +989,7 @@
     "more-plugins": "Mais plugins",
     "move-lines": "Mover linhas",
     "movements": "movimentos",
-    "my-profile": "Mi perfil",
+    "my-profile": "Meu perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo só é necessário em algumas hospedagens MySQL.",
@@ -1043,7 +1043,7 @@
     "notice": "Aviso",
     "notices": "Avisos",
     "notification": "Notificação",
-    "notifications": "Notificaciones",
+    "notifications": "Notificações",
     "november": "Novembro",
     "number": "Número",
     "number-attachments": "Nº de anexos",
@@ -1123,7 +1123,7 @@
     "pct-surcharge": "% Acréscimo",
     "pct-tax": "% impostos",
     "pct-vat": "VAT rate",
-    "pending": "pending",
+    "pending": "Pendente",
     "pending-invoices-button": "Faturas Pendentes:",
     "pending-orders-button": "Ordens Ptes:",
     "pending-reception": "Recepção pendente",
@@ -1385,7 +1385,7 @@
     "show-expired-receipts": "Mostrar recibos expirados",
     "show-month-stats": "Mostrar estatísticas mensais",
     "show-pending-remittances": "Mostrar remessas pendentes",
-    "show-price": "Show price on print",
+    "show-price": "Mostrar preço na impressão",
     "show-quantity": "Mostrar quantidade ao imprimir",
     "show-section-new": "Mostrar seção nova",
     "signature": "Assinatura",
@@ -1407,11 +1407,11 @@
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado de forma descendente",
     "source": "Fonte",
-    "source-code": "Source code",
+    "source-code": "Código fonte",
     "special-account": "Conta especial",
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "Contas especiais",
-    "specials-actions": "Specials Actions",
+    "specials-actions": "Ações especiais",
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "Padrão",
     "start": "Inicio",
@@ -1435,7 +1435,7 @@
     "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
     "sub-account": "Sub conta",
-    "sub-type": "sub-type",
+    "sub-type": "Subtipo",
     "subaccount": "Subcontas",
     "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
@@ -1498,7 +1498,7 @@
     "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
     "tax-area": "Área fiscal",
-    "tax-areas": "tax-areas",
+    "tax-areas": "Áreas fiscais",
     "tax-base": "Base Tributável",
     "tax-credit-account": "Credit account for taxes",
     "tax-debit-account": "Conta de débito para impostos",
@@ -1575,14 +1575,14 @@
     "undo": "Desfazer",
     "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
-    "unit-sale-price": "unit-sale-price",
+    "unit-sale-price": "Preço de venda unit.",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalación borrada del registro correctamente.",
     "unlock-entry": "Desbloquear",
     "unpaid": "unpaid",
-    "until-accounting-entry": "until-accounting-entry",
+    "until-accounting-entry": "Até lançamento contábil",
     "until-date": "Até",
     "until-subaccount": "Até subconta",
     "update": "update",
@@ -1611,7 +1611,7 @@
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "value-x",
-    "value-y": "value-y",
+    "value-y": "Valor Y",
     "values": "values",
     "variables": "Variáveis",
     "variant": "Variante",
@@ -1624,11 +1624,11 @@
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
     "vat-regularization": "Regularização de IVA",
-    "vehicle": "Vehículo",
+    "vehicle": "Veículo",
     "verified": "verificado",
     "version": "Versão",
     "video": "Vídeo",
-    "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
+    "vies-check-success": "O número '%vat-number%' está registado no sistema VIES",
     "view-api": "Ver API",
     "view-column-net-subtotal": "Ver columna subtotal o neto",
     "view-estimation": "Ver orçamento",
@@ -1673,7 +1673,7 @@
     "yesterday": "Ontem",
     "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
     "you-sent-a-audio": "Enviaste um áudio",
-    "you-sent-a-document": "Enviaste un documento",
+    "you-sent-a-document": "Enviaste um documento",
     "you-sent-a-location": "Você enviou uma localização",
     "you-sent-a-picture": "Você enviou uma imagem",
     "you-sent-a-video": "Enviou um vídeo",
