--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1263,7 +1263,7 @@
     "refunds": "Devolucions",
     "register": "Registrar",
     "register-install-ad": "Registra la instal·lació de FacturaScripts",
-    "register-install-ad-p": "Si registreu la instal·lació de FacturaScripts obtindreu 1 mes de patrocinis PRO, que us permet descarregar un dels nostres plugins exclusius. A més, ens ajuda a obtenir estadístiques de versions del core i de PHP.",
+    "register-install-ad-p": "Si registreu la instal·lació de FacturaScripts obtindreu 1 mes de patrocini PRO, que us permet descarregar un dels nostres plugins exclusius. A més, ens ajuda a obtenir estadístiques de versions del core i de PHP.",
     "register-installation": "Registrar l'instalació",
     "register-installation-p": "Registreu la vostra instalació per a poder actualitzar complements de pagament o privats",
     "register-symbol": "#",
